application/~bigdata/spark/zeppelin/zeppelin.service.spark.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeppelin
  namespace: spark
spec:
  clusterIP: None
  selector:
    app: zeppelin
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
